src/objects/Teacher__c.object
<CustomObject>
    <description>This is object</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Defines age of teacher</description>
        <label>Age</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Defines phone no of teacher</description>
        <label>Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <description>Defines email address of teacher</description>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Defines name of teacher</description>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Age__c</columns>
        <columns>Contact__c</columns>
        <columns>Email_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>